finish getAll show info for list view function